# FTC-Depthai-Vision

./: README.md  settings.gradle.kts
FTC-Depth-Ai/: .gitignore  build.gradle.kts
FTC-Depth-Ai/src/androidTest/java/com/example/ftc_depth_ai/: ExampleInstrumentedTest.kt
FTC-Depth-Ai/src/main/: AndroidManifest.xml
FTC-Depth-Ai/src/main/cpp/: CMakeLists.txt
FTC-Depth-Ai/src/main/cpp/OpenCV-Repackaged/: gradlew
FTC-Depth-Ai/src/main/cpp/openftc/apriltag/apriltag/: CMakeLists.txt
FTC-Depth-Ai/src/main/cpp/openftc/apriltag/apriltag/CMake/: vtkEncodeString.cmake
FTC-Depth-Ai/src/main/cpp/openftc/apriltag/apriltag/common/: g2d.c  getopt.c  homography.c  image_u8.c  matd.c  string_util.h  workerpool.c
FTC-Depth-Ai/src/main/cpp/openftc/apriltag/apriltag/test/: CMakeLists.txt
FTC-Depth-Ai/src/main/cpp/openftc/apriltag/src/main/cpp/: AprilTagDetectionJNI.cpp  AprilTagDetectorJNI.cpp  androidLog.cpp
FTC-Depth-Ai/src/main/cpp/openftc/easyopencv/: camera2_jni.cpp
FTC-Depth-Ai/src/main/java/com/example/ftc_depth_ai/depthai/: CameraPreviewExample.kt  DepthAi.kt  DepthAiDevice.kt  DepthAiDeviceManager.kt  RobotUsbManagerDepthAi.kt
FTC-Depth-Ai/src/main/java/com/example/ftc_depth_ai/ftc/: VisionPortal.kt  VisionPortalImpl.kt  VisionProcessor.kt  VisionProcessorInternal.kt
FTC-Depth-Ai/src/main/java/com/example/ftc_depth_ai/ftc/apriltag/: AprilTagCanvasAnnotator.kt  AprilTagDetection.kt  AprilTagGameDatabase.kt  AprilTagLibrary.kt  AprilTagMetadata.kt  AprilTagPoseFtc.kt  AprilTagPoseRaw.kt  AprilTagProcessor.kt  AprilTagProcessorImpl.kt
FTC-Depth-Ai/src/main/java/com/example/ftc_depth_ai/ftc/tfod/: TfodProcessor.java  TfodProcessorImpl.java
FTC-Depth-Ai/src/main/java/com/example/ftc_depth_ai/ftc/tfod/deprecated/: TfodProcessor.kt  TfodProcessorImpl.kt
FTC-Depth-Ai/src/main/java/com/example/ftc_depth_ai/openftc/apriltag/: AprilTagDetection.java  AprilTagDetectorJNI.java  AprilTagPose.java  ApriltagDetectionJNI.java
FTC-Depth-Ai/src/main/java/com/example/ftc_depth_ai/openftc/easyopencv/: FixedHandlerThread.java  LIFO_OpModeCallbackDelegate.java  MatRecycler.java  OpenCvCamera.java  OpenCvCameraBase.java  OpenCvCameraException.java  OpenCvCameraFactory.java  OpenCvCameraFactoryImpl.java  OpenCvCameraRotation.java  OpenCvInternalCamera.java  OpenCvInternalCamera2.java  OpenCvInternalCamera2Impl.java  OpenCvInternalCameraImpl.java  OpenCvNativeViewViewport.java  OpenCvPipeline.java  OpenCvSurfaceViewViewport.java  OpenCvSwitchableWebcam.java  OpenCvSwitchableWebcamImpl.java  OpenCvTracker.java  OpenCvTrackerApiPipeline.java  OpenCvViewRenderer.java  OpenCvViewport.java  OpenCvWebcam.java  OpenCvWebcamImpl.java  PipelineRecordingParameters.java  TimestampedOpenCvPipeline.java  Util.java
FTC-Depth-Ai/src/main/java/com/example/ftc_depth_ai/utils/: AndroidLog.java
FTC-Depth-Ai/src/test/java/com/example/ftc_depth_ai/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/com/example/ftcdepthai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ftcdepthai/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
